--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,10 @@ header {
     color: white;
     position: fixed;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    z-index: 1;
 }
 
 .left-header {
@@ -60,6 +62,8 @@ h3 {
     font-size: 18px;
     font-family: sans-serif;
     color: white;
+    margin-bottom: 16px;
+    text-shadow: rgb(0, 0, 0) 1px 0 4px;
 }
 
 h1 {
@@ -67,6 +71,8 @@ h1 {
     font-family: sans-serif;
     color: white;
     font-weight: bolder;
+    margin-bottom: 20px;
+    text-shadow: rgb(0, 0, 0) 1px 0 4px;
 }
 
 .button {
@@ -84,10 +90,136 @@ h1 {
     left: 11vh;
 }
 
-h3 {
-    margin-bottom: 16px;
+#second-container {
+    height: 100vh;
+    background-image: url("https://www.spacex.com/static/images/backgrounds-new/CRS21_UCS_DSC_9620.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
-h1 {
-    margin-bottom: 20px;
+#second-container-main {
+    position: absolute;
+    bottom: -85vh;
+    left: 11vh;
+}
+
+#third-container {
+    height: 100vh;
+    background-image: url("https://www.spacex.com/static/images/crew-1/dragon-window-desktop.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+h6 {
+    font-size: 16px;
+    font-family: sans-serif;
+    color: white;
+    text-shadow: rgb(0, 0, 0) 1px 0 2px;
+}
+
+.button-learn-more {
+    height: 6.5vh;
+    width: 20vh;
+    box-sizing: border-box;
+    border: solid white 2px;
+    padding: 2.5vh 2vh;
+    margin-top: 45px;
+}
+
+#third-container-main {
+    position: absolute;
+    bottom: -185vh;
+    left: 11vh;
+}
+
+#fourth-container {
+    height: 100vh;
+    background-image: url("https://www.spacex.com/static/images/backgrounds/iss_game.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+#button-try-now {
+    height: 6.5vh;
+    width: 20vh;
+    box-sizing: border-box;
+    border: solid white 2px;
+    padding: 2.5vh 3.7vh;
+    margin-top: 45px;
+}
+
+#fourth-container-main {
+    position: absolute;
+    bottom: -285vh;
+    left: 11vh;
+}
+
+#fifth-container{
+    height: 100vh;
+    background-image: url("https://www.spacex.com/static/images/crew-1/SN8.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+#fifth-container-main {
+    position: absolute;
+    bottom: -338vh;
+    left: 11vh;
+}
+
+#sixth-container {
+    height: 100vh;
+    background-image: url("https://www.spacex.com/static/images/backgrounds/home_moon.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-position-x: -10vh;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+#sixth-container-main {
+    position: absolute;
+    bottom: -465vh;
+    left: 110vh;
+}
+
+footer {
+    height: 85px;
+    width: 100%;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-text {
+    font-family: sans-serif;
+    font-weight: bolder;
+    font-size: 11px;
+    margin-left: 30px;
+}
+
+#footer-text-copyright {
+    font-family: sans-serif;
+    font-size: 10px;
+    color: gray;
 }
